删除冗余图片

--- a/History of spaced repetition/06.1989 SuperMemo adapts to user memory.md
+++ b/History of spaced repetition/06.1989 SuperMemo adapts to user memory.md
@@ -1,6 +1,6 @@
 # 1989: SuperMemo adapts to user memory
 
-# 1989: SuperMemo适应用户内存
+# 1989: SuperMemo 适应用户记忆
 
 ## Introducing flexible interval function
 
@@ -8,58 +8,41 @@
 
 [SuperMemo 2](https://supermemo.guru/wiki/SuperMemo_2) was great. Its simple algorithm has [survived in various mutations to this day](https://supermemo.guru/wiki/Exponential_growth_of_the_popularity_of_Algorithm_SM-2) in popular apps such as [Anki](https://supermemo.guru/wiki/Anki) or [Mnemosyne](https://supermemo.guru/wiki/Mnemosyne). However, the algorithm was dumb in the sense that there was no way of modifying the function of [optimum intervals](https://supermemo.guru/wiki/Optimum_interval). The findings of [1985](https://supermemo.guru/wiki/Birthday_of_SuperMemo) were set in stone. Memory [complexity](https://supermemo.guru/wiki/Complexity) and [stability increase](https://supermemo.guru/wiki/Stability_increase) were expressed with the same single number: [E-factor](https://supermemo.guru/wiki/E-factor). It is a bit like using a single lever in a bike to change gears, and the direction of driving.
 
+[SuperMemo 2](https://supermemo.guru/wiki/SuperMemo_2) 很棒。它的简单算法已经在流行的应用程序（如[Anki](https://supermemo.guru/wiki/Anki)或[Mnemosyne](https://supermemo.guru/wiki/Mnemosyne)）中[存活至今](https://supermemo.guru/wiki/exponential_growth_of_the_popular)。然而，该算法是愚蠢的，因为没有办法修改[最优区间](https://supermemo.guru/wiki/Optimum_interval)的函数。[1985](https://supermemo.guru/wiki/Birthday_of_SuperMemo) 的发现是板上钉钉的。记忆[复杂度](https://supermemo.guru/wiki/Complexity)和[稳定性增加](https://supermemo.guru/wiki/Stability_increase)用相同的数字表示：[E-factor](https://supermemo.guru/wiki/E-factor)。这有点像在自行车上使用一个单独的杠杆来改变齿轮和驾驶方向。
+
 Individual [items](https://supermemo.guru/wiki/Item) could adapt the spacing of review by changes to their estimated [difficulty](https://supermemo.guru/wiki/Complexity). Those changes could compensate for errors in the function of [optimum intervals](https://supermemo.guru/wiki/Optimum_interval). Even if the algorithm was slow to converge on the optimum, in theory, it was convergent. The main flaw was that, in [Algorithm SM-2](https://supermemo.guru/wiki/Algorithm_SM-2), new items would not benefit from the experience of old items.
-
-[Algorithm SM-2](https://supermemo.guru/wiki/Algorithm_SM-2) is not adaptable. New [items](https://supermemo.guru/wiki/Item) do not benefit from the experience of old items
-
-Algorithm SM-4 was the first attempt to arm [SuperMemo](https://supermemo.guru/wiki/SuperMemo) with universal adaptability. It was completed in February 1989. In the end, adaptability was too slow to show up, but inspiration gathered with Algorithm SM-4 was essential for further progress, esp. in understanding the problem of stability-vs-accuracy in [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). In short, Algorithm SM-4 was too stable to be accurate. This was quickly remedied in Algorithm SM-5 just 7 months later. Here is an excerpt from my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis) to explain the details:
-
-Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
-
-This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
-
-The main fault of [Algorithm SM-2](https://supermemo.guru/wiki/Algorithm_SM-2) seems to have been the arbitrary shape of the function of optimal intervals. Although very effective in practice and confirmed by years of experimental repetitions, **this function could not claim scientifically proved validity**, nor could it detect the overall impact of few day variations of optimal intervals on the learning process. Bearing these flaws in mind I decided to employ routine SuperMemo repetitions in the validation of the function of optimal intervals!
-
-Using optimization procedures like those applied in finding [E-Factors](https://supermemo.guru/wiki/E-Factor) I wanted the program to correct the initially proposed function whenever corrections appeared justified.
-
-To achieve this goal, I tabulated the function of optimal intervals.
-
-3349/5000  
-[SuperMemo 2](https://supermemo.guru/wiki/SuperMemo_2)很棒。它的简单算法已经在流行的应用程序中(如[Anki](https://supermemo.guru/wiki/exponential_growth_of_the_popular) (https://supermemo.guru/wiki/Anki)或[Mnemosyne](https://supermemo.guru/wiki/Mnemosyne)[存活至今](https://supermemo.guru/wiki/Mnemosyne)。然而，该算法是愚蠢的，因为没有办法修改[最优区间]的函数(https://supermemo.guru/wiki/Optimum_interval)。(https://supermemo.guru/wiki/Birthday_of_SuperMemo)内存[复杂度](https://supermemo.guru/wiki/Complexity)和[稳定性增加](https://supermemo.guru/wiki/Stability_increase)用相同的数字表示:[E-factor](https://supermemo.guru/wiki/E-factor)。这有点像在自行车上使用一个单独的杠杆来改变齿轮和驾驶方向。
-
-
 
 单个的[项目](https://supermemo.guru/wiki/Item)可以根据其估计的[难度](https://supermemo.guru/wiki/Complexity)来调整评审的间隔。这些变化可以补偿[最佳间隔]函数中的错误(https://supermemo.guru/wiki/Optimum_interval)。即使算法收敛速度慢，理论上也是收敛的。主要的缺陷是，在[Algorithm SM-2](https://supermemo.guru/wiki/Algorithm_SM-2)中，新项目不会从旧项目的经验中受益。
 
-
+[Algorithm SM-2](https://supermemo.guru/wiki/Algorithm_SM-2) is not adaptable. New [items](https://supermemo.guru/wiki/Item) do not benefit from the experience of old items
 
 [Algorithm SM-2](https://supermemo.guru/wiki/Algorithm_SM-2)不适用。新的[项目](https://supermemo.guru/wiki/Item)不受益于旧项目的经验
 
-
+Algorithm SM-4 was the first attempt to arm [SuperMemo](https://supermemo.guru/wiki/SuperMemo) with universal adaptability. It was completed in February 1989. In the end, adaptability was too slow to show up, but inspiration gathered with Algorithm SM-4 was essential for further progress, esp. in understanding the problem of stability-vs-accuracy in [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). In short, Algorithm SM-4 was too stable to be accurate. This was quickly remedied in Algorithm SM-5 just 7 months later. Here is an excerpt from my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis) to explain the details:
 
 算法SM-4是第一次尝试武装[SuperMemo](https://supermemo.guru/wiki/SuperMemo)与通用的适应性。它于1989年2月竣工。最后，适应性表现得太慢了，但是用算法SM-4收集的灵感对于进一步的进展是至关重要的，特别是在理解[间隔重复]中的稳定性vs准确性问题上(https://supermemo.guru/wiki/Spaced_repetition)。简而言之，SM-4算法太过稳定而不能准确。这在7个月后的SM-5算法中很快得到了纠正。以下是我的[硕士论文](https://supermemo.guru/wiki/Master's Thesis)的一段摘录。
 
-
+Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
 
 档案警告:[为什么使用文字档案?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
 
+This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
+本文是 [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) 的《*优化学习*》(1990)的一部分。
 
-本文是[Piotr Wozniak]的《*优化学习*》(https://supermemo.guru/wiki/Piotr_Wozniak)(1990)的一部分。
+The main fault of [Algorithm SM-2](https://supermemo.guru/wiki/Algorithm_SM-2) seems to have been the arbitrary shape of the function of optimal intervals. Although very effective in practice and confirmed by years of experimental repetitions, **this function could not claim scientifically proved validity**, nor could it detect the overall impact of few day variations of optimal intervals on the learning process. Bearing these flaws in mind I decided to employ routine SuperMemo repetitions in the validation of the function of optimal intervals!
 
+[Algorithm SM-2](https://supermemo.guru/wiki/Algorithm_SM-2) 的主要错误似乎是最优区间函数的任意形状。虽然在实践中非常有效，并且经过多年的实验重复得到了证实，但是**这个函数并不能科学地证明**的有效性，也不能检测出最优区间的几天变化对学习过程的整体影响。考虑到这些缺陷，我决定使用常规的 SuperMemo 重复来验证最优音程的作用!
 
-
-[Algorithm SM-2](https://supermemo.guru/wiki/Algorithm_SM-2)的主要错误似乎是最优区间函数的任意形状。虽然在实践中非常有效，并且经过多年的实验重复得到了证实，但是**这个函数并不能科学地证明**的有效性，也不能检测出最优区间的几天变化对学习过程的整体影响。考虑到这些缺陷，我决定使用常规的SuperMemo重复来验证最优音程的作用!
-
-
+Using optimization procedures like those applied in finding [E-Factors](https://supermemo.guru/wiki/E-Factor) I wanted the program to correct the initially proposed function whenever corrections appeared justified.
 
 使用类似于查找[E-Factors](https://supermemo.guru/wiki/E-Factor)的优化过程，我希望程序在出现合理的修正时纠正最初提出的函数。
 
-
+To achieve this goal, I tabulated the function of optimal intervals.
 
 为了达到这个目的，我把最优区间的函数列成表。
 
-[![Matrix of optimal intervals showed up in SuperMemo 4 in 1989 and survived to this day in SuperMemo 17 with few changes](https://supermemo.guru/images/thumb/0/0c/Matrix_of_optimum_intervals_in_SuperMemo_5.jpg/746px-Matrix_of_optimum_intervals_in_SuperMemo_5.jpg)](https://supermemo.guru/wiki/File:Matrix_of_optimum_intervals_in_SuperMemo_5.jpg)
+[![Matrix of optimal intervals showed up in SuperMemo 4 in 1989 and survived to this day in SuperMemo 17 with few changes](../.gitbook/assets/746px-Matrix_of_optimum_intervals_in_SuperMemo_5.jpg)](https://supermemo.guru/wiki/File:Matrix_of_optimum_intervals_in_SuperMemo_5.jpg)
 
 > ***Figure:** Matrix of optimal intervals showed up in SuperMemo 4 in 1989, and survived to this day in SuperMemo 17 with few changes. In SuperMemo 4, it was the source of information for optimum spacing. In SuperMemo 17, it is derived from the OF matrix generated by Algorithm SM-15 that is used concurrently with Algorithm SM-17. The picture presents a matrix from SuperMemo 5, and shows a significant departure from the original values of the matrix. In SuperMemo 4, adaptations proceeded at much slower pace*
 >
@@ -67,11 +50,9 @@ To achieve this goal, I tabulated the function of optimal intervals.
 
 Particular entries of the matrix of optimal intervals (later called the OI matrix) were initially taken from the formulas used in Algorithm SM-2.
 
-SuperMemo 4 (February 1989), in which the new solution was implemented, used the OI matrix to determine values of inter-repetition intervals:
-
 最优区间矩阵(后来称为OI矩阵)的特定项最初取自算法SM-2中的公式。
 
-
+SuperMemo 4 (February 1989), in which the new solution was implemented, used the OI matrix to determine values of inter-repetition intervals:
 
 SuperMemo 4(1989年2月)实现了新的解决方案，使用OI矩阵来确定重复间隔的值:
 
@@ -91,44 +72,35 @@ SuperMemo 4(1989年2月)实现了新的解决方案，使用OI矩阵来确定重
 
 However, the OI matrix was not fixed once for all. In the course of repetitions, particular entries of the matrix were increased or decreased depending on the grades. For example, if the entry indicated the optimal interval to be X and the used interval was X+Y while the grade after this interval was not lower than four, then the new value of the entry would fall between X and X+Y.
 
-Thus the values of the OI entries in the equilibrium state should settle at the point where the stream of poor-retention items balances the stream of good-retention items in its influence on the matrix.
-
-As a consequence, SuperMemo 4 was intended to yield an ultimate definition of the function of optimal intervals.  
 然而，OI矩阵并不是一次性固定的。在重复的过程中，矩阵的具体项随着年级的不同而增加或减少。例如，如果条目指出最佳的间隔是X，使用的间隔是X+Y，而这个间隔之后的等级不低于4，那么条目的新值将落在X和X+Y之间。
 
-
+Thus the values of the OI entries in the equilibrium state should settle at the point where the stream of poor-retention items balances the stream of good-retention items in its influence on the matrix.
 
 因此，处于平衡状态的OI项的值应该稳定在一个点上，在这个点上，低保留项流与高保留项流对矩阵的影响相平衡。
 
-
+As a consequence, SuperMemo 4 was intended to yield an ultimate definition of the function of optimal intervals.
 
 因此，SuperMemo 4试图给出最优区间函数的最终定义。
 
 ## Rigid SuperMemo 4
 
-## 刚性SuperMemo 4
+## 刚性 SuperMemo 4
 
 It did not take me long to realize that the verification-correction cycle in the new algorithm was too long. It was not much different than running the [1985 eperiment](https://supermemo.guru/wiki/Birth_of_SuperMemo) on the computer. To determine decade-long intervals, I needed a decade to pass to test the outcomes of the review. This led to [Algorithm SM-5](https://supermemo.guru/wiki/Algorithm_SM-5) seven months later. Here is the problem with Algorithm SM-4 as described in my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis):
 
+我很快就意识到新算法的验证-校正周期太长了。这与在计算机上运行[1985年实验](https://supermemo.guru/wiki/Birth_of_SuperMemo)没有太大的不同。为了确定十年的间隔，我需要十年的时间来测试审查的结果。这导致了七个月后的[Algorithm SM-5](https://supermemo.guru/wiki/Algorithm_SM-5)。以下是我在[硕士论文](https://supermemo.guru/wiki/Master's _thesis)中描述的算法SM-4的问题:
+
 Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
-
-This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
-
-Algorithm SM-4 was implemented in SuperMemo 4 and was used between March 9, 1989 and October 17, 1989. Although the main concept of modifying the function of optimal intervals seemed to be a major step forward, the implementation of the algorithm was a failure. The basic insufficiency of the algorithm appeared to result from formulas applied in modification of the OI matrix.
-
-我很快就意识到新算法的验证-校正周期太长了。这与在计算机上运行[1985年实验](https://supermemo.guru/wiki/Birth_of_SuperMemo)没有太大的不同。为了确定十年的间隔，我需要十年的时间来测试审查的结果。这导致了七个月后的[Algorithm SM-5](https://supermemo.guru/wiki/Algorithm_SM-5)。以下是我在[硕士论文]中描述的算法SM-4的问题(https://supermemo.guru/wiki/Master's _thesis):
-
-
 
 档案警告:[为什么使用文字档案?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
 
+This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
+本文是 [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) 的《*优化学习*》(1990)的一部分。
 
-本文是[Piotr Wozniak]的《*优化学习*》(https://supermemo.guru/wiki/Piotr_Wozniak)(1990)的一部分。
+Algorithm SM-4 was implemented in SuperMemo 4 and was used between March 9, 1989 and October 17, 1989. Although the main concept of modifying the function of optimal intervals seemed to be a major step forward, the implementation of the algorithm was a failure. The basic insufficiency of the algorithm appeared to result from formulas applied in modification of the OI matrix.
 
-
-
-算法SM-4在SuperMemo 4中实现，并在1989年3月9日至1989年10月17日期间使用。虽然修改最优区间函数的主要概念似乎是向前迈出的一大步，但是算法的实现是失败的。该算法的基本不足似乎是由于公式应用于OI矩阵的修改。
+算法 SM-4 在 SuperMemo 4 中实现，并在1989 年 3 月9 日至1989 年 10 月 17 日期间使用。虽然修改最优区间函数的主要概念似乎是向前迈出的一大步，但是算法的实现是失败的。该算法的基本不足似乎是由于公式应用于OI矩阵的修改。
 
 There were two the most striking flaws:
 
@@ -142,29 +114,25 @@ There were two the most striking flaws:
 
 After seven months of using Algorithm SM-4, the OI matrices of particular databases did not look much different from their initial states. One could explain this fact by the correctness of my earlier predictions concerning the real values of the optimal inter-repetition intervals, however, as it was later proved by means of [Algorithm SM-5](https://supermemo.guru/wiki/Algorithm_SM-5), the actual reason of the stability of the matrices was the flaws in the optimization formulae.
 
-As far as acquisition rate and retention are concerned, there is no reliable evidence that Algorithm SM-4 brought any progress. Slight improvement could as well be related to general betterment of the software and improvement in 
-
 在使用SM-4算法7个月后，特定数据库的OI矩阵与它们的初始状态并没有太大的不同。一个可以解释这个事实我之前预测的正确性有关最优inter-repetition间隔的实际价值,然而,因为它后来被证明是通过算法SM-5 (https://supermemo.guru/wiki/Algorithm_SM-5),矩阵的稳定性的实际原因是优化公式中的缺陷。
 
-
+As far as acquisition rate and retention are concerned, there is no reliable evidence that Algorithm SM-4 brought any progress. Slight improvement could as well be related to general betterment of the software and improvement in 
 
 就获取率和保持率而言，没有可靠的证据表明SM-4算法带来了任何进展。轻微的改进也可能与软件的总体改进和……的改进有关
 
 ## Remnants of SuperMemo 4 in new SuperMemos
 
-## SuperMemo4的残余在新的SuperMemo里
+## SuperMemo4 的残余在新的 SuperMemo 里
 
 Interestingly, you can still see the matrix of optimum intervals in newer versions of SuperMemo. The matrix is not used by the algorithm, however, it is displayed in SuperMemo statistics as it informs the user about the impact of [complexity](https://supermemo.guru/wiki/Complexity) on the prospects of items in the learning process.
+
+如果你比较一个使用了8个月的[SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5)生成的矩阵，你会发现它与使用了20年的[Algorithm SM-8]生成的矩阵有显著的相似性(https://supermemo.guru/wiki/Algorithm_SM-8):
 
 If you compare a matrix produced by [SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5) in 8 months of use, you will notice significant similarity to the matrix produced in two decades of using [Algorithm SM-8](https://supermemo.guru/wiki/Algorithm_SM-8):
 
 有趣的是，你仍然可以在新版本的SuperMemo中看到最佳间隔矩阵。这个矩阵并没有被算法使用，但是它显示在SuperMemo统计数据中，因为它告诉用户[复杂性](https://supermemo.guru/wiki/Complexity)对学习过程中项目的前景的影响。
 
-
-
-如果你比较一个使用了8个月的[SuperMemo 5](https://supermemo.guru/wiki/SuperMemo_5)生成的矩阵，你会发现它与使用了20年的[Algorithm SM-8]生成的矩阵有显著的相似性(https://supermemo.guru/wiki/Algorithm_SM-8):
-
-[![Matrix of optimum intervals can still be generated in SuperMemo 17 with procedures of Algorithm SM-15](https://supermemo.guru/images/thumb/2/2f/OF_matrix_in_SuperMemo_17.jpg/800px-OF_matrix_in_SuperMemo_17.jpg)](https://supermemo.guru/wiki/File:OF_matrix_in_SuperMemo_17.jpg)
+[![Matrix of optimum intervals can still be generated in SuperMemo 17 with procedures of Algorithm SM-15](../.gitbook/assets/600px-Matrix_of_optimum_intervals_in_SuperMemo_17.jpg)](https://supermemo.guru/wiki/File:Matrix_of_optimum_intervals_in_SuperMemo_17.jpg)
 
 > ***Figure:** Matrix of optimum intervals is no longer used in Algorithm SM-17. However, it can still be generated with procedures of Algorithm SM-15. The columns correspond with easiness of the material expressed as A-Factor. The rows correspond with memory stability expressed as repetition category*
 >
@@ -496,7 +464,7 @@ The Algorithm SM-5 has been in use since October 17, 1989, and has surpassed all
 
 算法SM-5已经使用自10月17日,1989年,超过了所有的预期提供一个有效的方法确定所需的函数(最优间隔)(https://supermemo.guru/wiki/Optimal_interval),结果,改善(收购率)(https://supermemo.guru/wiki/Acquisition_rate)(15000项目在9个月内学会)。从图3.5可以看出，收购率至少是[SM-2](https://supermemo.guru/wiki/algorithm_sm2)和[SM-4](https://supermemo.guru/wiki/Algorithm_SM-4)两种算法联合应用的两倍!
 
-[![Changes of the work burden in databases supervised by SM-2 and SM-5 algorithms](https://supermemo.guru/images/thumb/e/eb/Burdern_SM2_vs_SM5.jpg/407px-Burdern_SM2_vs_SM5.jpg)](https://supermemo.guru/wiki/File:Burdern_SM2_vs_SM5.jpg)
+[![Changes of the work burden in databases supervised by SM-2 and SM-5 algorithms](../.gitbook/assets/407px-Burdern_SM2_vs_SM5.jpg)](https://supermemo.guru/wiki/File:Burdern_SM2_vs_SM5.jpg)
 
 > ***Figure:** Changes of the work burden in databases supervised by SM-2 and SM-5 algorithms.*
 
