--- a/History of spaced repetition/07.1990 Universal formula for memory.md
+++ b/History of spaced repetition/07.1990 Universal formula for memory.md
@@ -8,15 +8,15 @@
 
 By 1990, I had no doubt. I had a major discovery at hands. I cracked the problem of [forgetting](https://supermemo.guru/wiki/Forgetting). I knew the [optimum timing](https://supermemo.guru/wiki/Spaced_repetition) of review for simple memories. Once I secured the permission to describe my findings in my [Master's Thesis](https://supermemo.guru/wiki/Optimization_of_learning), my appetite for discovery kept growing. I hoped I might find a universal formula for long-term memory. A formula that would help me track the behavior of memory for any pattern of exposure or retrieval.
 
-到1990年，我已经毫无疑问了。我手头有一项重大发现。我解决了[遗忘]的问题(https://supermemo.guru/wiki/forget)。我知道简单记忆复习的[最佳时间](https://supermemo.guru/wiki/Spaced_repetition)。一旦我获得了在我的硕士论文中描述我的发现的许可(https://supermemo.guru/wiki/Optimization_of_learning)，我发现的欲望就一直在增长。我希望我能找到一个长期记忆的通用公式。这是一个公式，可以帮助我跟踪任何暴露或检索模式下的记忆行为。
+到 1990 年，我已经毫无疑问了。我手头有一项重大发现。我解决了遗忘的问题。我知道了简单记忆复习的[最佳时间](https://supermemo.guru/wiki/Spaced_repetition)。当我在硕士论文中获得描述我的发现的许可后，我去探索的欲望就一直在增长。我希望能找到一个长期记忆的通用公式。这个公式可以帮助我跟踪任何暴露或检索模式下的记忆行为。
 
 I already had a collection of data that might help me find the formula. Before discovering the optimum spacing of repetitions in [1985](https://supermemo.guru/wiki/Birth_of_SuperMemo), I used pages of questions for review of knowledge. The review was chaotic and determined by the availability of time, the need, or the mood. I called that "*intermittent learning*". I had recall data for individual pages and for each review. That was the ideal kind of data that did not have the periodicity of [SuperMemo](https://supermemo.guru/wiki/SuperMemo). The exact kind of data needed to solve the problem of memory. However, I had that data on paper only.
 
-我已经收集了一些数据来帮助我找到公式。在[1985]发现重复的最佳间隔之前(https://supermemo.guru/wiki/Birth_of_SuperMemo)，我使用问题页来复习知识。审查是混乱的，由时间的可用性，需要，或心情决定。我称之为“间歇学习”。我有每个页面和每个评论的回顾数据。这是一种理想的数据类型，它不具有[SuperMemo]的周期性(https://supermemo.guru/wiki/SuperMemo)。解决内存问题所需的确切类型的数据。然而，我只有纸上的数据。
+我已经收集了一些数据来帮助我找到公式。在 1985 发现重复的最佳间隔之前，我使用问题页来复习知识。这种复习是混乱的，而且取决于时间的利用率，需求，或心情。我称之为“间歇学习”。我有每个页面和每个评论的回顾数据。这是一种理想的数据类型，它不具有 SuperMemo 的周期性。它正是解决记忆问题需要的确切类型的数据。然而，我只有纸上的数据。
 
 In Spring 1990, I recruited my sister to do the typing. No. I do not have a younger sister who would do that eagerly. My sister was 17 years my senior. Being a bit inconsiderate for her time, I used her love to make her do the donkey work. I feel guilty about it. She died just two years later. I never had a chance to repay her contribution to the theory of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition), which she never even had a chance to understand. Starting on May 1, 1990, she used my time away from the PC to transfer the data from paper to the computer. It took her many days of slow typing. It was worth it.
 
-1990年春，我请姐姐来打字。不。我没有一个妹妹愿意这样做。我姐姐比我大17岁。我对她的时间有点不体谅，就用她的爱让她干些体力活。我为此感到内疚。两年后她去世了。我从来没有机会报答她对[间隔重复]理论(https://supermemo.guru/wiki/Spaced_repetition)的贡献，她甚至从来没有机会理解。从1990年5月1日开始，她利用我离开电脑的时间把纸上的数据传输到电脑上。她花了很多天打字很慢。这是值得的。
+1990 年春，我请妹妹来打字。不，我没有一个妹妹愿意这样做。我姐姐比我大 17 岁。我有点不体谅她，用她的爱让她干这些打字活。我为此感到内疚。两年后她去世了。我从来没有机会报答她对间隔重复理论的贡献，她甚至从来没有机会理解。从 1990 年 5 月 1 日开始，她利用我离开电脑的时间把纸上的数据传输到电脑上。她因为打字很慢花了很多天，但这是值得的。
 
 ## Model of intermittent learning
 
@@ -24,35 +24,27 @@ In Spring 1990, I recruited my sister to do the typing. No. I do not have a youn
 
 Throughout the summer of 1990, instead of focusing on my [Master's Thesis](https://supermemo.guru/wiki/Optimization_of_learning), I worked on the "*model of intermittent learning*". It was not unusual for me to work for 10 hours straight, or go to sleep at 7 am empty-handed, or leave the computer churning the numbers overnight.
 
+整个 1990 年的夏天，我没有专注于我的硕士论文，而是致力于 “间歇学习模式” 。对我来说，连续工作 10 个小时，早上 7 点空手而睡，或者让电脑整夜翻页，这些都很正常。
+
 Persistence and tinkering pay. Only teens can afford it and should be given the space and the freedom. Despite being 28 years old, I was being tolerated at home pretty well. Like an immature teen. I lived at my sister's apartment where I could leech on her kindness. Long hours at the computer were excused as "*working on my Master's Thesis*". The truth was nobody asked me to do it, nobody demanded it, it did not even push [SuperMemo](https://supermemo.guru/wiki/SuperMemo) much ahead. It was a sheer case of scientific curiosity. I just wanted to know how memory works.
 
-整个1990年的夏天，我没有专注于我的硕士论文(https://supermemo.guru/wiki/Optimization_of_learning)，而是致力于“*间歇学习模式”。对我来说，连续工作10个小时，或者早上7点空手而睡，或者让电脑整夜翻页，这些都很正常。
-
-
-
-坚持和修补是有回报的。只有青少年才能负担得起，应该给他们空间和自由。尽管我已经28岁了，我在家里还是很能忍受的。像个不成熟的孩子。我住在姐姐的公寓里，我可以从她的善良中获益。长时间坐在电脑前可以被解释为“做我的硕士论文”。事实是，没有人要求我这么做，也没有人要求我这么做，它甚至没有提前推进[SuperMemo](https://supermemo.guru/wiki/SuperMemo)。这完全是出于对科学的好奇。我只是想知道记忆是如何运作的。
+坚持和修补是有回报的。只有青少年才能负担得起，应该给他们空间和自由。尽管我已经28岁了，我在家里还挺能忍受的，像个不成熟的孩子。我住在姐姐的公寓里，我可以从她的善良中获益。长时间坐在电脑前可以被解释为“做我的硕士论文”。事实是，没有人要求我这么做，也没有人要求我这么做，它甚至没有提前推进 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) 。这完全是出于对科学的好奇。我只是想知道记忆是如何运作的。
 
 I had dozens of pages of questions and their [repetition history](https://supermemo.guru/wiki/Repetition_history). I tried to predict "memory lapses per page". I used [root-mean-square deviation](https://supermemo.guru/wiki/Deviation) for lapse prediction (denoted below as Dev). By Jul 10, 1990, Tuesday, I reached Dev<3 and felt like the problem was almost "solved." On Jul 12, 1990, I improved to Dev=2.877 (incidentally, my Thesis speaks of 2.887241). However, by Aug 27, 1990, I declared the problem unsolvable. My notes from that day say:
 
 Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 
-Aug 27, 1990: ***I solved the problem** of intermittent learning **showing that it is unsolvable**! One parameter is not able to describe the strength of memory related to the whole page of items. This shows that **there are no optimal intervals for items with low E-factors***!
+Aug 27, 1990: **I solved the problem** of intermittent learning **showing that it is unsolvable**! One parameter is not able to describe the strength of memory related to the whole page of items. This shows that **there are no optimal intervals for items with low E-factors**!
 
 On Aug 30 1990, I decribed the model for my Master's Thesis. The text covered 15 pages that don't make for a good reading. I bet nobody has ever had the patience to read this all. That chapter was not even published at [supermemo.com](http://supermemo.com/) when my Master's Thesis was put on-line in excerpts in the late 1990s.
 
-我有几十页的问题和他们的[重复历史](https://supermemo.guru/wiki/Repetition_history)。我试图预测“每一页的记忆缺失”。我使用[root-mean-square deviation](https://supermemo.guru/wiki/Deviation)来进行误差预测(如下图所示为Dev)。到1990年7月10日，星期二，我到达了Dev<3，并且感觉这个问题几乎已经“解决”了。1990年7月12日，我提高到Dev=2.877(顺便说一句，我的论文提到了2.887241)。然而，到1990年8月27日，我宣布这个问题无法解决。我那天的笔记说:
+我有几十页的问题和他们的[重复历史](https://supermemo.guru/wiki/Repetition_history)。我试图预测“每一页的记忆缺失”。我使用 [root-mean-square deviation](https://supermemo.guru/wiki/Deviation) 来进行误差预测(如下图所示为Dev)。到 1990 年 7 月 10 日，星期二，我到达了 Dev < 3 ，并且感觉这个问题几乎已经“解决”了。 1990 年7 月 12 日，我提高到 Dev = 2.877 (顺便说一句，我的论文提到了 2.887241 )。然而，到 1990 年 8 月 27 日，我宣布这个问题无法解决。我那天的笔记说:
 
+个人轶事。(为什么使用轶事?)
 
+1990 年 8 月 27 日:**我解决了**间歇性学习的问题**，表明它是不可解决的**!一个参数无法描述与整个项目页相关的内存强度。这说明**对于低e因子的项目**没有最优的时间间隔!
 
-个人轶事。(为什么使用轶事?)(https://supermemo.guru/wiki/Why_use_anecdotes%3F)
-
-
-
-1990年8月27日:***我解决了**间歇性学习的问题**，表明它是不可解决的**!一个参数无法描述与整个项目页相关的内存强度。这说明**对于低e因子的项目***没有最优的时间间隔!
-
-
-
-1990年8月30日，我描述了我硕士论文的模型。这篇课文有15页，不好读。我敢打赌没有人有耐心读完这篇文章。这一章甚至没有在[supermemo.com](http://supermemo.com/)上发表，我的硕士论文在上世纪90年代末被摘录放到网上。
+1990 年 8 月 30 日，我描述了我硕士论文的模型。这篇课文有 15 页，不好读。我敢打赌没有人有耐心读完这篇文章。这一章甚至没有在 [supermemo.com](http://supermemo.com/) 上发表，我的硕士论文在上世纪 90 年代末被摘录放到网上。
 
 However, the conclusions drawn on the basis of the model had a profound effect on my thinking about memory in the decades that followed. The whole idea behind the model is actually reminiscent of the optimizations used to deliver [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17) (2014-2016).
 
@@ -62,19 +54,13 @@ Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anec
 
 Aug 31, 1990: :[...]*my formulas work only when intervals are not much shorter than the previous strength*
 
-然而，在这个模型的基础上得出的结论对我在接下来的几十年里对记忆的思考产生了深远的影响。这个模型背后的整个思想实际上让人想起了用来交付[Algorithm SM-17]的优化(https://supermemo.guru/wiki/Algorithm_SM-17)(2014-2016)。
-
-
+然而，在这个模型的基础上得出的结论对我在接下来的几十年里对记忆的思考产生了深远的影响。这个模型背后的整个思想实际上让人想起了用来交付 Algorithm SM-17 的优化。
 
 当我宣布这个问题无法解决时，我的意思是我无法准确地描述“困难页面”的记忆，因为异质材料需要更复杂的模型。然而，1990年8月31日的报告听起来要乐观得多:
 
+个人轶事。(为什么使用轶事?)
 
-
-个人轶事。(为什么使用轶事?)(https://supermemo.guru/wiki/Why_use_anecdotes%3F)
-
-
-
-1990年8月31日:……我的公式只有在间隔不比以前的强度短多少的情况下才有效
+1990年8月31日:……我的公式只有在间隔不比以前的强度短多少的情况下才有效。
 
 ## Past (1990) vs. Present (2018)
 
@@ -84,21 +70,17 @@ Conclusions at the end of the chapter, and the procedure itself are reminiscent 
 
 This old seemingly boring portion of my Master's Thesis has then grown in importance by now. I dare say that only inferior data separated that work from [Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17) that emerged long 25 years later. I quote the text with minor notational and stylistic improvements without the chapter about [forgetting curves](https://supermemo.guru/wiki/Forgetting_curve) that was erroneous due to highly heterogeneous material used in computations:
 
-结论一章的结束,过程本身让人想起方法我曾经在2005年寻找通用公式(内存稳定性)(https://supermemo.guru/wiki/Stability)的增加,在2014年,当[算法SM-17] (https://supermemo.guru/wiki/Algorithm_SM-17)是基于一个更精确的数学描述的内存。就像最新的[SuperMemo](https://supermemo.guru/wiki/SuperMemo)算法一样，该模型可以为任何重复计划计算[retention](https://supermemo.guru/wiki/Retention)。当然，它的准确性要差得多，因为它是基于劣质数据的。更重要的是，在1990年的时候，PC机的工作时间要比现在长好几个小时。
+最后一章的结论，和过程本身让我想起，在 2005 年我正在寻找通用公式(内存稳定性)的增加的方法，在 2014 年算法 SM-17 基于一个更精确描述记忆的数学工具。就像最新的  SuperMemo 算法一样，该模型可以为任何重复计划计算[retention](https://supermemo.guru/wiki/Retention)。当然，它的准确性要差得多，因为它是基于劣质数据的。更重要的是，在 1990 年的时候，PC 机的工作时间要比现在长好几个小时。
 
-
-
-我硕士论文中这个看起来很无聊的部分现在变得越来越重要了。我敢说，只有劣等数据才能将其与25年后出现的[Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17)区分开来。我引用了文本，在注释和风格上做了细微的改进，但没有提到关于[遗忘曲线]的章节(https://supermemo.guru/wiki/Forgetting_curve)，这是由于计算中使用的材料高度异构而导致的错误:
+我硕士论文中这个看起来很无聊的部分现在变得越来越重要了。我敢说，只有劣等数据才能将其与 25 年后出现的[Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17) 区分开来。我引用了文本，在注释和风格上做了细微的改进，但没有提到关于遗忘曲线的章节，这是由于计算中使用的材料高度异构而导致的错误:
 
 Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use_literal_archives%3F)
 
 This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
-档案警告:为什么使用literal archives?
+存档警告:为什么使用 literal archives?
 
-
-
-这篇文章是[Piotr Wozniak]的一部分:“改进学习”(https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
+这篇文章是Piotr Wozniak的一部分：“改进学习” (1990)
 
 **Model of intermittent learning**
 
@@ -112,11 +94,7 @@ Below I present an attempt to augment the SuperMemo model so that it can be used
 
 [SuperMemo](https://supermemo.guru/wiki/SuperMemo)模型为计算[最优间隔](https://supermemo.guru/wiki/Optimal_interval)提供了一个基础，它应该在时间最优学习过程中分离重复。
 
-
-
 但是，如果重复以不规律的间隔进行，则不允许预测记忆变量的变化。
-
-
 
 下面，我提出了一个尝试，以扩大SuperMemo模型，使它可以用于描述间歇学习的过程。
 
@@ -128,11 +106,7 @@ The collected data, available in the computer readable form, include the descrip
 
 在[第3章](http://super-memory.com/english/ol/beginning.htm)中，我提到了在[算法SM-0](https://supermemo.guru/wiki/SuperMemo_on_paper)开发之前，我学习英语和生物学的方法。
 
-
-
 在此期间(1982-1984年)收集的数据为间歇学习模型的建立提供了良好的基础。[Items](https://supermemo.guru/wiki/Item)按照[minimum information principle](https://supermemo.guru/wiki/Minimum_information_principle)(通常是成对的单词形式)进行分组，按照不规则的审查过程进行分组。
-
-
 
 收集的数据以计算机可读的形式提供，其中包括71页的重复描述，另外还有80页类似的重复描述，这些重复描述参与了由
 
@@ -156,15 +130,9 @@ Ln -> LapsnIn -> IntnDn -> DevnR -> RepNo
 
 对于那些熟悉[Algorithm SM-17](https://supermemo.guru/wiki/Algorithm_SM-17)的人，我们修改了下面文本中的符号。此外，我们还更改了In和Ln等符号，这些符号在打印时很容易被误解为对数。
 
-
-
 更改清单:
 
-
-
 Ln -> LapsnIn -> IntnDn -> DevnR -
-
-
 
 ## Formulation of the problem of intermittent learning
 
@@ -175,8 +143,6 @@ Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use
 This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
 档案警告:为什么使用literal archives?
-
-
 
 这篇文章是[Piotr Wozniak]的一部分:“改进学习”(https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
@@ -213,8 +179,6 @@ Archive warning: [Why use literal archives?](https://supermemo.guru/wiki/Why_use
 This text was part of: "*Optimization of learning*" by [Piotr Wozniak](https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
 档案警告:为什么使用literal archives?
-
-
 
 这篇文章是[Piotr Wozniak]的一部分:“改进学习”(https://supermemo.guru/wiki/Piotr_Wozniak) (1990)
 
