--- a/I would never send my kids to school/12.natural-creativity-cycle-zi-ran-chuang-zao-li-zhou-qi.md
+++ b/I would never send my kids to school/12.natural-creativity-cycle-zi-ran-chuang-zao-li-zhou-qi.md
@@ -18,7 +18,7 @@ Understanding the creativity cycle is essential for high creativity, good learni
 
 理解创造力周期对于高创造力、良好的学习和快乐的头脑是必不可少的。下面的图片解释了自然创造力周期是如何运作的。有关详细信息，请参阅[创造力周期的神经方面](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Neural_aspects_of_the_creativity_cycle)。
 
-![](../.gitbook/assets/natural_creativity_cycle%20%281%29.png)
+![](../.gitbook/assets/natural_creativity_cycle.png)
 
 > **Figure:** In the **natural creativity cycle** there is a regular interplay between the creative processes and the consolidation of knowledge. For high creativity and good learning, those processes must proceed unimpeded. Sleep must come naturally and should never be interrupted. Waking day should also have large blocks protected from interruption, multitasking, and [stress](https://supermemo.guru/wiki/Stress). Starting with the **creative morning explosion**, seeds of activation \(in red\) get gradually converted into a **big idea** that emerges on the next morning. In the meantime, learning, reasoning, and creative activations reshuffle neuronal connections. New connections emerge, get strengthened, weakened, eliminated, or are consolidated for long term storage. All steps are essential for the emergence of the ultimate big idea. For details see: [Neural aspects of the natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle#Neural_aspects_of_the_creativity_cycle)
 >
