--- a/History of spaced repetition/01.Introduction.md
+++ b/History of spaced repetition/01.Introduction.md
@@ -8,7 +8,7 @@
 
 The pop version of the history of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) is full of myths and falsehoods. This text is to tell you the true story. The problem with spaced repetition is that it became too popular for its own effective replication. Like a fast mutating virus it keeps jumping from application to application, and tells its own story while accumulating errors on the way.
 
-流行版间隔重复的历史充满了虚构和谬误。这篇文章正是要告诉你那段真实的故事。间隔重复的问题在于，它变得过于流行，以至于无法进行自身有效的复制。就像一个快速变异的病毒一样，它不断地从一个应用程序应用到另一个应用程序，并在不断积累错误的过程中讲述自己的故事。
+间隔重复历史的流行版本充满了虚构和谬误。这篇文章正是要告诉你那段真实的故事。间隔重复的问题在于，它变得过于流行，以至于无法进行自身的有效复制。就像一个快速变异的病毒一样，它不断地从一个软件应用到另一个软件，并在不断积累错误的过程中讲述自己的故事。
 
 ## Who invented spaced repetition?
 
@@ -16,7 +16,7 @@ The pop version of the history of [spaced repetition](https://supermemo.guru/wik
 
 This is the story of how I solved the problem of forgetting. I figured out how to learn efficiently. Modesty is a waste of time, therefore I will add that I think I actually know how to significantly amplify human intelligence. In short: memory underlies knowledge which underlies intelligence. If we can control what we store in memory and what we forget, we can control our problem solving capacity. In a very similar way, we can also amplify artificial intelligence. Its a great relief to be able to type in those proud words after many years of a gag order imposed by commercial considerations.
 
-这就是我如何解决遗忘问题的故事。我找到了高效学习的方法。谦虚是浪费时间，所以我想补充一点，我认为我实际上知道如何显著地提高人类的智力。简而言之：记忆是知识的基础，知识是智力的基础。如果我们能控制我们存储在记忆中的和我们忘记的事物，我们就能控制我们解决问题的能力。相似的，我们也可以提高人工智能。多年来，出于商业考虑，美国一直实行言论禁止令。如今，能够把这些令人自豪的话打出来，我感到如释重负。
+这就是我如何解决遗忘问题的故事。我找到了高效学习的方法。谦虚是浪费时间，所以我想补充一点，我认为我实际上知道如何显著地提高人类的智力。简而言之：记忆是知识的基础，知识是智力的基础。如果我们能控制我们存储在记忆中的和我们忘记的事物，我们就能控制我们解决问题的能力。同样，我们也可以提高人工智能。在多年的商业考量强加的言论禁止令之后，能够把这些令人自豪的话打出来是一种极大的宽慰。
 
 Back in the early 1990s, I thought I knew how to turn education systems around the world upside down and make them work for all students. However, any major change requires a cultural paradigm shift. It is not enough for a poor student from a poor communist country to announce the potential for a change. I did that, in my [Master's Thesis](https://supermemo.guru/wiki/Master's_Thesis), but I found little interest in my ideas. Even my own family was dismissive. Luckily, I met a few smart friends at my university who declared they would use my ideas to set up a business. Like Microsoft changed the world of personal computing, we would change the way people learn. We owned a powerful learning tool: [SuperMemo](https://supermemo.guru/wiki/SuperMemo). However, for [SuperMemo](https://supermemo.guru/wiki/SuperMemo) to conquer the world it had to ditch its roots for a while. To convince others, [SuperMemo](https://supermemo.guru/wiki/SuperMemo) had to be a product of pure science. It could not have just been an idea conceived by a humble student.
 
