--- a/History of spaced repetition/01.Introduction.md
+++ b/History of spaced repetition/01.Introduction.md
@@ -44,15 +44,15 @@ It is [Krzysztof Biedalak](https://supermemo.guru/wiki/Krzysztof_Biedalak) (CEO)
 
 If you believe that [Ebbinghaus](https://supermemo.guru/wiki/Ebbinghaus) invented [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) in 1885, I apologize. When compiling the [history of SuperMemo](http://super-memory.com/english/history.htm), we put the name of the venerable German psychologist at the top of the chronological list and the myth was born. Ebbinghaus never worked over [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition).
 
-如果你相信艾宾浩斯在 1885 年发明了间隔重复，我很抱歉。在编写 SuperMemo 的历史时，我们把这位德高望重的德国心理学家的名字放在了时间顺序列表的首位，于是这个虚构的故事就诞生了。艾宾浩斯从未参与强调间隔重复的研究。
+如果你相信艾宾浩斯在 1885 年发明了间隔重复，我很抱歉。在编写 SuperMemo 的历史时，我们把这位德高望重的德国心理学家的名字放在了时间顺序列表的首位，于是这个虚构的故事就诞生了。艾宾浩斯从未参与间隔重复的研究。
 
 Writing about history of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) is not easy. Each time we do it, we generate more myths through distortions and misunderstandings. Let's then make it clear and emphatic. There has been a great deal of memory research before [SuperMemo](https://supermemo.guru/wiki/SuperMemo). However, each time I give prolific credit, keep in mind the words of [Biedalak](https://supermemo.guru/wiki/Biedalak):
 
-写关于间隔重复的历史并不容易。每次我们这样做，我们都会通过扭曲和误解产生更多的虚构内容。让我们一起让它变得清晰明确。在 SuperMemo 之前有很多关于记忆的研究。然而，每当我给更多的内容肯定与赞扬的时候，请记住 Biedalak 的话：
+书写关于间隔重复的历史并不容易。每次我们这样做，我们都会通过扭曲和误解产生更多的虚构内容。让我们一起让它变得清晰明确。在 SuperMemo 之前有很多关于记忆的研究。然而，每当我给更多的内容肯定与赞扬的时候，请记住 Biedalak 的话：
 
 > If [SuperMemo](https://supermemo.guru/wiki/SuperMemo) is a space shuttle, we need to acknowledge prior work done on bicycles. In the meantime, our competition is busy trying to replicate our shuttle, but the efforts are reminiscent of the [Soviet Buran program](https://en.wikipedia.org/wiki/Buran_(spacecraft)). Buran has at least made one space flight. It was unmanned
 >
-> 如果 SuperMemo 是一架航天飞机，我们需要承认之前在自行车上所做的工作。与此同时，我们的竞争对手正忙于复制我们的航天飞机，但这些努力让人想起苏联的暴风雪航天飞机计划。Buran 至少进行过一次太空飞行。但那是没有载人的。
+> 如果 SuperMemo 是一架航天飞机，我们需要承认之前在自行车上所做的工作。与此同时，我们的竞争对手正忙于复制我们的航天飞机，但这些努力让人想起苏联的暴风雪航天飞机计划。暴风雪至少进行过一次太空飞行。但那是没有载人的。
 
 This texts is to put the facts straight, and openly disclose the early steps of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). This is a fun foray into the past that brings me a particular delight with the sense of "mission accomplished". Now that we can call our effort a global success, there is no need to make it more respectable than it really is. No need to make it more scientific, more historic, or more certified.
 
