--- a/History of spaced repetition/16.Summary of memory research.md
+++ b/History of spaced repetition/16.Summary of memory research.md
@@ -80,7 +80,7 @@ In 1969, Alfred Maksymowicz wrote "Read and think". You will not find his book i
 
 ## 1972: Leitner box
 
-## 1972年:莱特纳盒子
+## 1972 年：莱特纳盒子
 
 The greatest practical and algorithmic success in the area of spaced review before SuperMemo can be attributed to [Sebastian Leitner](https://en.wikipedia.org/wiki/Sebastian_Leitner). In 1972, he proposed the **Leitner box system**. In a Leitner system, flashcards are prioritized and dumped to boxes corresponding with different [stability](https://supermemo.guru/wiki/Stability) levels. The Leitner system has one huge advantage over the theoretical advice dished prior to his proposition: it was practical. It was a system anyone could use with little introduction. Even SuperMemo on paper ([1985](https://supermemo.guru/wiki/Birth_of_SuperMemo)) seems complex in comparison.
 
